--- a/movie-ticket/src/main/resources/templates/customer/view-customer.html
+++ b/movie-ticket/src/main/resources/templates/customer/view-customer.html
@@ -10,45 +10,65 @@
             <div class="col-lg-3 sidebar-admin">
                 <div th:replace="~{layout::sidebar-admin}"></div>
             </div>
-            <div class="col-lg-9 ps-5 table-dashboard category">
-                <h3 th:text="${'Xem chi tiết khách hàng :  ' + customer.fullName}" class="my-4">Xem danh mục phim</h3>
-
-                <div id="preview-image-add" class="row mb-3">
-                    <div class="col-sm-10">
-                        <div id="image-preview-container2" class="img-thumbnail">
-                        <table class="table table-hover">
-                            <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">TÊN KHÁCH HÀNG</th>
-                                <th scope="col">ĐỊA CHỈ</th>
-                                <th scope="col">GMAIL</th>
-                                <th scope="col">NGÀY THÁNG NĂM SINH</th>
-                                <th scope="col">SỐ ĐIỆN THOẠI</th>
-                                <th scope="col">SỐ CCCD</th>
-                                <th></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td th:text="${customer.id}"></td>
-                                <td th:text="${customer.fullName}"></td>
-                                <td th:text="${customer.address}"></td>
-                                <td th:text="${customer.email}"></td>
-                                <td th:text="${customer.birthday}"></td>
-                                <td th:text="${customer.phoneNumber}"></td>
-                                <td th:text="${customer.idCard}"></td>
-                                <td>
-                                    <button style="background: grey ; border-radius: 10px">
-                                        <a th:href="@{/dashboard/customer}" style="text-decoration: none ; color: white">Thoát</a>
-                                    </button>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                        </div>
+            <div class="col-lg-9 ps-5 table-dashboard user-purchased">
+                <h3 th:text="${'Xem chi tiết khách hàng : ' + customer.fullName}" class="my-4"></h3>
+                <div class="mb-3 row">
+                    <label for="inputNameCategory" class="col-sm-2 col-form-label">ID khách hàng</label>
+                    <div class="col-sm-10"style="color: #848484">
+                        <input type="text" readonly class="form-control-plaintext" id="inputNameCategory"
+                               th:text="${customer.id}" >
                     </div>
                 </div>
+                <div class="mb-3 row">
+                    <label for="movieBooking" class="col-sm-2 col-form-label">Tên khách hàng</label>
+                    <div class="col-sm-10"style="color: #848484">
+                        <input type="text" readonly class="form-control-plaintext" id="movieBooking"
+                               th:text="${customer.fullName}">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="categoryMovie" class="col-sm-2 col-form-label">Địa chỉ khách hàng</label>
+                    <div class="col-sm-10"style="color: #848484">
+                        <input type="text" readonly class="form-control-plaintext" id="categoryMovie"
+                               th:text="${customer.address}">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="datePurchased" class="col-sm-2 col-form-label">Gmail khách hàng</label>
+                    <div class="col-sm-10"style="color: #848484">
+                        <input type="text" readonly class="form-control-plaintext" id="datePurchased"
+                               th:text="${customer.email}">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="price" class="col-sm-2 col-form-label">Ngày tháng năm sinh</label>
+                    <div class="col-sm-10"style="color: #848484">
+                        <input type="text" readonly class="form-control-plaintext" id="price"
+                               th:text="${customer.birthday}">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="timeStart" class="col-sm-2 col-form-label">Số điện thoại khách hàng</label>
+                    <div class="col-sm-10"style="color: #848484">
+                        <input type="text" readonly class="form-control-plaintext" id="timeStart"
+                               th:text="${customer.phoneNumber}">
+                    </div>
+                </div>
+
+                <div class="mb-3 row">
+                    <label for="phone" class="col-sm-2 col-form-label">Số CCCD/CMND khách hàng</label>
+                    <div class="col-sm-10" style="color: #848484">
+                        <input type="text" readonly class="form-control-plaintext" id="phone"
+                               th:text="${customer.phoneNumber}">
+                    </div>
+                </div>
+
+                <div class="col-sm-12 d-flex justify-content-center" >
+                    <button type="button" class="btn btn-primary" style="background: #E20442 ;width: 242px">
+                        <a th:href="@{/dashboard/customer}" style="text-decoration: none ; color: white ">Quay lại</a>
+                    </button>
+                </div>
+
             </div>
         </div>
     </section>
