--- a/movie-ticket/src/main/resources/templates/customer/dashboard-admin-customer.html
+++ b/movie-ticket/src/main/resources/templates/customer/dashboard-admin-customer.html
@@ -8,48 +8,28 @@
     <section>
         <div class="row my-5 dashboard-admin">
             <div class="col-lg-3 sidebar-admin">
-                <h4>MENU</h4>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item active"><a href="#"><i class="fa-solid fa-gauge-high"></i> Tổng quan</a>
-                    </li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-ticket"></i> Quản lý đơn hàng</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-clapperboard"></i> Quản lý phim</a>
-                    </li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-user-pen"></i></i> Quản lý nhân
-                        viên</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-users-viewfinder"></i></i> Quản lý
-                        khách hàng</a></li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-file-lines"></i></i> Quản lý bài viết</a>
-                    </li>
-                    <li class="list-group-item"><a href="#"><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
-                    </li>
-                </ul>
+                <div th:replace="~{layout::sidebar-admin}"></div>
             </div>
             <div class="col-lg-9 ps-5 table-dashboard order">
-                <div class="create">
-                    <a href="/dashboard/customer/create"><i class="fa-solid fa-square-plus"></i> Thêm khách hàng</a>
-                </div>
+<!--                <div class="create">-->
+<!--                    <a href="/dashboard/customer/create"><i class="fa-solid fa-square-plus"></i> Thêm khách hàng</a>-->
+<!--                </div>-->
                 <div class="table-main">
                     <div class="search-table">
                         <form>
                             <div class="row">
-                                <div class="col-lg-5">
+                                <div class="col-lg-6">
                                     <div class="col-lg-6 form-floating mb-3">
-                                        <input type="text" class="form-control" id="nameCustomer"
+                                        <input type="text" class="form-control" name="name" id="nameCustomer"
                                                placeholder="name@example.com">
                                         <label for="nameCustomer"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo tên khách hàng</label>
                                     </div>
                                 </div>
-                                <div class="col-lg-7 d-flex justify-content-between">
+                                <div class="col-lg-6 d-flex justify-content-between">
                                     <div class="col-auto form-floating mb-3">
-                                        <input type="text" class="form-control" id="phoneCustomer"
+                                        <input type="text" class="form-control" name="phone" id="phoneCustomer"
                                                placeholder="name@example.com">
                                         <label for="phoneCustomer"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo số điện thoại</label>
-                                    </div>
-                                    <div class="col-auto form-floating mb-3">
-                                        <input type="text" class="form-control" id="gmailCustomer"
-                                               placeholder="name@example.com">
-                                        <label for="gmailCustomer"><i class="fa-solid fa-magnifying-glass"></i> Tìm theo gmail của khách hàng</label>
                                     </div>
                                     <div class="col-lg-2 form-floating mb-3">
                                         <input type="submit" class="form-control btn btn-primary" value="Tìm">
@@ -66,7 +46,7 @@
                             <th scope="col">TÊN KHÁCH HÀNG</th>
                             <th scope="col">NGÀY THÁNG NĂM SINH</th>
                             <th scope="col">SỐ ĐIỆN THOẠI</th>
-                            <th></th>
+                            <th ></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -91,14 +71,28 @@
                 </div>
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link">Trước</a>
+                        <li th:class="${customerList.hasPrevious() ? 'page-item' : 'page-item disabled'}">
+                            <a class="page-link" th:href="@{
+                            ${#httpServletRequest.getRequestURI()}+ '?page=' +
+                            ${customerList.number - 1} +
+                            ${name != null && name != '' ? '&name='+name:''} +
+                            ${phone != null && phone != '' ? '&phone='+phone:''}
+                            }">Trước</a>
                         </li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Sau</a>
+                        <li th:each="i : ${#numbers.sequence(0, customerList.totalPages - 1)}" th:class="${i == customerList.number ? 'page-item active' : 'page-item'}">
+                            <a class="page-link" th:text="${i + 1}" th:href="@{
+                            ${#httpServletRequest.getRequestURI()} + '?page=' + ${i} +
+                            ${name != null && name != '' ? '&name='+name:''} +
+                            ${phone != null && phone != '' ? '&phone='+phone:''}
+                            }"></a>
+                        </li>
+                        <li th:class="${customerList.hasNext() ? 'page-item' : 'page-item disabled'}">
+                            <a class="page-link" th:href="@{
+                            ${#httpServletRequest.getRequestURI()} + '?page=' +
+                            ${customerList.number + 1} +
+                            ${name != null && name != '' ? '&name='+name:''} +
+                            ${phone != null && phone != '' ? '&phone='+phone:''}
+                            }">Tiếp</a>
                         </li>
                     </ul>
                 </nav>
@@ -111,7 +105,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <div class="d-flex">
-                                        <div class="icon">
+                                        <div class="icon" style="color: red">
                                             <i class="fa-regular fa-bell"></i>
                                         </div>
                                         <div class="box-header-modal">
