--- a/movie-ticket/src/main/resources/templates/customer/edit-customer.html
+++ b/movie-ticket/src/main/resources/templates/customer/edit-customer.html
@@ -11,7 +11,7 @@
                 <div th:replace="~{layout::sidebar-admin}"></div>
             </div>
             <div class="col-lg-9 ps-5 table-dashboard category">
-                <h3 th:text="${'Chỉnh sửa thông tin khách hàng ' + customerDto.fullName }">Chỉnh sửa danh mục phim</h3>
+                <h3 th:text="${'Chỉnh sửa thông tin khách hàng : ' + customerDto.fullName }">Chỉnh sửa danh mục phim</h3>
                 <form class="edit-item my-4" th:object="${customerDto}" method="post" action="/dashboard/customer/edit">
                     <div class="row mb-3">
                         <label for="inputNameCategory" class="col-sm-2 col-form-label">Chỉnh sửa tên khách hàng</label>
