--- a/movie-ticket/src/main/resources/templates/index.html
+++ b/movie-ticket/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{layout::head}">
 </head>
 <body>
@@ -9,7 +9,7 @@
         <div class="row mt-5">
             <div class="col-md-12">
                 <div class="card text-bg-dark">
-                    <img src="/image/banner-source.png" class="card-img" alt="...">
+                    <img alt="..." class="card-img" src="/image/banner-source.png">
                     <div class="card-img-overlay d-flex align-items-end">
                         <div class="p-lg-3 mb-lg-4 p-md-0 mb-md-0 bg-body-tertiary rounded-3">
                             <div class="container">
@@ -18,7 +18,7 @@
                                 <p class="text-secondary-custom">Đạo diễn: Martin Scorsese</p>
                                 <p class="text-secondary-custom">Diễn viên chính: Leonardo DiCaprio</p>
                                 <p class="text-secondary-custom">Khởi chiếu vào ngày 10/11/2023</p>
-                                <a href="#" role="button" class="btn btn-primary">Đặt vé ngay</a>
+                                <a class="btn btn-primary" href="#" role="button">Đặt vé ngay</a>
                             </div>
                         </div>
                     </div>
@@ -26,13 +26,13 @@
             </div>
         </div>
     </section>
-    <section id="list-fim-home" class="my-5">
+    <section class="my-5" id="list-fim-home">
         <h3>Phim chiếu rạp hot</h3>
         <div class="row mt-3">
-            <div th:each="movie: ${movies}" class="col-lg-2 my-3">
+            <div class="col-lg-2 my-3" th:each="movie: ${movies}">
                 <a th:href="@{/movie/detail/__${movie.id}__}">
                     <div class="card text-bg-dark">
-                        <img th:src="${movie.avatar}" class="card-img" th:alt="${movie.title}">
+                        <img class="card-img" th:alt="${movie.title}" th:src="${movie.avatar}">
                         <div class="card-img-overlay">
                             <h5 class="card-title" th:text="${movie.title}">Đất Rừng Phương Nam</h5>
                             <p class="card-text" th:text="${'Thể loại: '+movie.category.nameCategory}">Thể loại: Gia
@@ -43,16 +43,18 @@
             </div>
         </div>
     </section>
-    <section id="category-film" class="my-5">
+    <section class="my-5" id="category-film">
         <h3>Thể loại Phim</h3>
         <div class="row mt-3">
-            <div th:each="category: ${categories}" class="col-lg-3 my-3">
-                <div class="card text-bg-dark">
-                    <img th:src="${category.image}" class="card-img" th:alt="${category.nameCategory}">
-                    <div class="card-img-overlay d-flex justify-content-center align-items-center">
-                        <h5 class="card-title" th:text="${category.nameCategory}">Hành động</h5>
+            <div class="col-lg-3 my-3" th:each="category: ${categories}">
+                <a th:href="@{/movie/category/__${category.id}__}">
+                    <div class="card text-bg-dark">
+                        <img class="card-img" th:alt="${category.nameCategory}" th:src="${category.image}">
+                        <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                            <h5 class="card-title" th:text="${category.nameCategory}">Hành động</h5>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -60,7 +62,7 @@
         <div class="row mt-5">
             <div class="col-md-12">
                 <div class="card text-bg-dark">
-                    <img src="/image/banner-footer.png" class="card-img" alt="Banner Footer">
+                    <img alt="Banner Footer" class="card-img" src="/image/banner-footer.png">
                     <div class="card-img-overlay d-flex align-items-center justify-content-center text-center">
                         <div>
                             <h2 class="fs-2 fw-bold">Đặt ngay vé để không bỏ lỡ những bộ phim Hot nhất</h2>
