--- a/movie-ticket/src/main/resources/templates/movie/add.html
+++ b/movie-ticket/src/main/resources/templates/movie/add.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="description">Mô tả phim</label>
-                        <textarea style="width: 100%" id="description" th:field="*{description}" required></textarea>
+                        <textarea style="width: 100%" id="description" th:field="*{description}"></textarea>
                         <p style="color: red" th:errors="*{description}"
                            th:if="${#fields.hasErrors('description')}"></p>
                     </div>
@@ -121,7 +121,7 @@
             const file = files[i];
             const img = document.createElement("img");
             img.src = URL.createObjectURL(file);
-            img.style.width = "300px"
+            // img.style.width = "300px"
             img.style.height = "150px"
             container.appendChild(img);
         }
@@ -143,7 +143,7 @@
             const file = files[i];
             const img = document.createElement("img");
             img.src = URL.createObjectURL(file);
-            img.style.width = "300px"
+            // img.style.width = "300px"
             img.style.height = "150px"
             container.appendChild(img);
         }
