--- a/movie-ticket/src/main/resources/templates/dashboard.html
+++ b/movie-ticket/src/main/resources/templates/dashboard.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-primary">Sửa thông tin</button>
+<!--          <button type="button" class="btn btn-primary"></button>-->
         </div>
       </div>
     </div>
