--- a/movie-ticket/src/main/resources/templates/employee/create-employee.html
+++ b/movie-ticket/src/main/resources/templates/employee/create-employee.html
@@ -58,8 +58,8 @@
                     <div class="row mb-3">
                         <label for="account" class="col-sm-2 col-form-label">Account:</label>
                         <div class="col-sm-10">
-                            <select type="text" class="form-control" id="account" th:field="*{account}">
-                                <option th:each="item:${accountList}" th:text="${item.username}"
+                            <select type="text" class="form-control" id="account">
+                                <option th:field="*{account}" th:each="item:${accountList}" th:text="${item.username}"
                                         th:value="${item.id}"></option>
                             </select>
                         </div>
