--- a/movie-ticket/src/main/resources/templates/dashboard.html
+++ b/movie-ticket/src/main/resources/templates/dashboard.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 <head th:replace="~{layout::head}">
+
+  <link rel="stylesheet" type="text/css" href="/css/chart.css">
 </head>
 <body>
 <div class="container">
@@ -83,11 +85,17 @@
               <p class="number-order" th:text="${countYear + ' đơn đặt hàng'}">7012 đơn đặt hàng</p>
             </div>
           </div>
+          <div class="container">
+            <canvas id="canvas"></canvas>
+          </div>
         </div>
+
       </div>
     </div>
   </section>
 </div>
 <footer th:replace="~{layout::footer}"></footer>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+<script type="text/javascript" src="/js/chart.js"></script>
 </body>
 </html>
