--- a/movie-ticket/src/main/resources/templates/movie/movies.html
+++ b/movie-ticket/src/main/resources/templates/movie/movies.html
@@ -48,7 +48,7 @@
                             </div>
                         </form>
                     </div>
-                    <table class="table table-hover">
+                    <table class="table table-hover" style="text-align: center">
                         <thead>
                         <tr>
                             <th scope="col">STT</th>
@@ -56,7 +56,7 @@
                             <th scope="col">ĐẠO DIỄN</th>
                             <th scope="col">NGÀY CÔNG CHIẾU</th>
                             <th scope="col">DANH MỤC</th>
-                            <th scope="col" style="text-align: center">THAO TÁC</th>
+                            <th scope="col">THAO TÁC</th>
                         </tr>
                         </thead>
                         <tbody>
