--- a/movie-ticket/src/main/resources/templates/movie/details.html
+++ b/movie-ticket/src/main/resources/templates/movie/details.html
@@ -12,7 +12,7 @@
             </div>
             <div class="col-lg-9 ps-5 table-dashboard category">
                 <div class="create mb-4">
-                    <a href="/dashboard/movies"><i class="fa-solid fa-arrow-left"></i> &nbsp; Quay lại</a>
+                    <a href="/dashboard/movies"><i class="fa-solid fa-arrow-left"></i> &nbsp; Quản lý phim</a>
                 </div>
                 <h3 class="my-4" th:text="${'Chi tiết phim  ' + movie.title}">Xem chi tiết phim</h3>
                 <div class="row">
