--- a/movie-ticket/src/main/resources/templates/layout.html
+++ b/movie-ticket/src/main/resources/templates/layout.html
@@ -2,11 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 <head th:fragment="head">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Movie24h - Đặt mua vé xem phim trực tuyến</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/libs/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/libs/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="icon" type="image/x-icon" href="/image/favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
