--- a/movie-ticket/src/main/resources/templates/booking/view-booking.html
+++ b/movie-ticket/src/main/resources/templates/booking/view-booking.html
@@ -37,7 +37,7 @@
                     <label for="datePurchased" class="col-sm-2 col-form-label">Ngày mua:</label>
                     <div class="col-sm-10">
                         <input type="text" readonly class="form-control-plaintext" id="datePurchased"
-                               th:value="${booking.datePurchased}">
+                               th:value="${booking.datePurchased}"/>
                     </div>
                 </div>
                 <div class="mb-3 row">
