--- a/movie-ticket/src/main/resources/static/css/main.css
+++ b/movie-ticket/src/main/resources/static/css/main.css
@@ -605,9 +605,13 @@ button.btn-close i {
     color: #848484;
 }
 p.field-error {
-    color: red;
+    color: white;
     font-size: 14px;
-    margin: 5px 0;
+    margin: 7px 0;
+    background: #e20442;
+    padding: 10px;
+    font-weight: 700;
+    border-radius: 5px;
 }
 .form-select {
     background: unset;
@@ -625,4 +629,35 @@ p.field-error {
 
 .ck-editor__editable {
     min-height: 200px;
+}
+
+.box-ads {
+    background: #dedede;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    position: sticky;
+    top: 10px;
+}
+
+#list-post hr {
+    color: #eee;
+}
+
+ol {
+    color: #eee;
+}
+#detail-post img {
+    max-width: 100%;
+}
+
+#blog-detail img.img-fluid {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
+    fill: #000;
 }
