--- a/movie-ticket/src/main/resources/templates/post/blog.html
+++ b/movie-ticket/src/main/resources/templates/post/blog.html
@@ -26,7 +26,7 @@
                                 <h5 class="card-title" th:text="${post.title}">Card title</h5>
                                 <p class="card-text" th:text="${post.description}">This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-body-secondary" th:text="${post.createdAt}"></small>
+                                <p class="card-text"><small class="text-body-secondary" th:text="${#dates.format(post.createdAt, 'dd-MM-yyyy')}"></small>
                                 </p>
                             </div>
                         </div>
@@ -41,6 +41,26 @@
                 </div>
             </div>
         </div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li th:class="${posts.hasPrevious() ? 'page-item' : 'page-item disabled'}">
+                    <a class="page-link" th:href="@{
+                            ${#httpServletRequest.getRequestURI()}+ '?page=' +
+                            ${posts.number - 1}
+                            }">Trước</a>
+                </li>
+                <li th:each="i : ${#numbers.sequence(0, posts.totalPages - 1)}" th:class="${i == posts.number ? 'page-item active' : 'page-item'}">
+                    <a class="page-link" th:text="${i + 1}" th:href="@{
+                            ${#httpServletRequest.getRequestURI()} + '?page=' + ${i}}"></a>
+                </li>
+                <li th:class="${posts.hasNext() ? 'page-item' : 'page-item disabled'}">
+                    <a class="page-link" th:href="@{
+                            ${#httpServletRequest.getRequestURI()} + '?page=' +
+                            ${posts.number + 1}
+                            }">Tiếp</a>
+                </li>
+            </ul>
+        </nav>
     </section>
 </div>
 
