--- a/movie-ticket/src/main/resources/templates/post/edit.html
+++ b/movie-ticket/src/main/resources/templates/post/edit.html
@@ -23,8 +23,25 @@
                         <p style="color: #e20442" th:errors="*{title}" th:if="${#fields.hasErrors('title')}"></p>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label" for="description">Nội dung bài viết</label>
-                        <textarea style="width: 100%" id="description" th:field="*{content}"></textarea>
+                        <label class="form-label" for="image-preview">Xem trước</label>
+                        <div>
+                            <img id="image-preview" th:src="${post.image}" th:alt="${post.title}" width="200px" height="auto">
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="image">Cập nhật ảnh đại diện</label>
+                        <input class="form-control" id="image" type="file" required accept="image/*">
+                        <input class="form-control" id="image-result" th:field="*{image}" type="hidden" required>
+                        <p style="color: #e20442" th:errors="*{image}" th:if="${#fields.hasErrors('image')}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="description">Mô tả ngắn cho phim</label>
+                        <input class="form-control" id="description" th:field="*{description}" type="text" required>
+                        <p style="color: #e20442" th:errors="*{description}" th:if="${#fields.hasErrors('description')}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="content">Nội dung bài viết</label>
+                        <textarea style="width: 100%" id="content" th:field="*{content}"></textarea>
                         <p style="color: red" th:errors="*{content}"
                            th:if="${#fields.hasErrors('content')}"></p>
                     </div>
@@ -37,4 +54,24 @@
     </section>
 </div>
 <footer th:replace="~{layout::footer}"></footer>
+<script>
+    $(document).ready(function () {
+        $("#image").change(function () {
+            const formData = new FormData();
+            let file = $("#image")[0].files[0];
+            formData.append('file', file);
+            $.ajax({
+                url: "/upload/image",
+                type: "POST",
+                data: formData,
+                success: function (data) {
+                    $("#image-result").val(data.url);
+                    $("#image-preview").attr('src',data.url);
+                },
+                processData: false,
+                contentType: false
+            });
+        });
+    });
+</script>
 <div th:replace="~{layout::js}"></div>
